<?xml version="1.0"?>

<package format="2">

  <name>openvdb</name>
  <version>0.1.7</version>
  <description>OpenVDB is an open source software library for working with sparse volumetric data</description>

  <license>Proprietary</license>

  <author email="ynava@anybotics.com">Yoshua Nava</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="dlopez@anybotics.com">Daniel López Madrid</maintainer>
  <maintainer email="mgaertner@anybotics.com">Magnus Gaertner</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>boost</depend>
  <depend>libblosc</depend>
  <depend>tbb</depend>
  <depend>zlib</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>

</package>