<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>openvdb</name>
  <version>0.1.16</version>
  <description>OpenVDB is an open source software library for working with sparse volumetric data</description>
  <author email="ynava@anybotics.com">Yoshua Nava</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="dlopez@anybotics.com">Daniel López Madrid</maintainer>
  <maintainer email="mgaertner@anybotics.com">Magnus Gaertner</maintainer>
  <license>Proprietary</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
<!--   <build_depend condition="$ROS_VERSION == 1">cmake_clang_tools</build_depend> -->
  <depend>boost</depend>
  <depend>libblosc-dev</depend>
  <depend>tbb</depend>
  <depend>zlib</depend>
<!--   <test_depend condition="$ROS_VERSION == 1">cmake_code_coverage</test_depend> -->
  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
